--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,22 @@ yarn-debug.log*
 /storage/*
 !/storage/.keep
 /public/uploads
+
+# Jest coverage
+coverage/
+*.log
+
+# Build artifacts
+dist/
+build/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
