--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "npx jest",
     "test:watch": "npx jest --watch",
     "test:coverage": "npx jest --coverage",
-    "validate": "npm run lint && npm run test"
+    "validate": "npm run lint && npm run test",
+    "screenshots": "node scripts/capture-screenshots.js"
   },
   "repository": {
     "type": "git",
@@ -34,7 +35,8 @@
   "devDependencies": {
     "eslint": "^8.50.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "puppeteer": "^21.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
