--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Plataforma para conectar pessoas a ONGs - Find NGOs to support",
   "main": "public/index.html",
   "scripts": {
-    "start": "npx http-server public -p 8000 -o",
-    "dev": "npx http-server public -p 8000 -o",
+    "start": "npm run build:css && npx http-server public -p 8000 -o",
+    "dev": "npm run build:css && npx http-server public -p 8000 -o",
+    "dev:watch": "npm-run-all --parallel dev:css:watch dev:server",
+    "dev:server": "npx http-server public -p 8000 -o",
+    "dev:css:watch": "npx tailwindcss -i ./public/css/styles.css -o ./public/css/output.css --watch",
+    "build:css": "npx tailwindcss -i ./public/css/styles.css -o ./public/css/output.css --minify",
     "lint": "npx eslint public/js",
     "lint:fix": "npx eslint public/js --fix",
     "test": "npx jest",
@@ -39,7 +43,9 @@
     "eslint": "^8.50.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "puppeteer": "^21.0.0"
+    "npm-run-all": "^4.1.5",
+    "puppeteer": "^21.0.0",
+    "tailwindcss": "^3.4.18"
   },
   "engines": {
     "node": ">=16.0.0"
